added secure websocket connection

--- a/static/index.html
+++ b/static/index.html
@@ -180,7 +180,7 @@
     </div>
 
     <script>
-        const uri = 'ws://' + location.host + '/ws';
+        const uri = 'wss://' + location.host + '/ws';
         const ws = new WebSocket(uri);
 
         ws.onopen = () => {
